k8s/dev_container.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev
  labels:
    app: dev
    network_policy: no_egress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev
  template:
    metadata:
      labels:
        app: dev
        network_policy: no_egress
    spec:
      containers:
        - name: devcontainer
          image: dev_container:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 22
          volumeMounts:
            - mountPath: /home/ubuntu
              name: ubuntu-home
          resources:
            requests:
              cpu: "0.5"
              memory: "1G"
            limits:
              memory: "1G"
      volumes:
        - name: ubuntu-home
          hostPath:
            path: /home/ubuntu/dev_home
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: dev
spec:
  selector:
    app: dev
  ports:
    - protocol: TCP
      port: 22
      targetPort: 22
      nodePort: 30022
  type: NodePort
status:
  loadBalancer:
    ingress:
    - ip: 0.0.0.0
